fixed alignment styling in project item

--- a/app/components/Projects/projectItem.module.css
+++ b/app/components/Projects/projectItem.module.css
@@ -22,6 +22,7 @@
 .header {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   padding-block: 0 0.8rem;
 }
 
@@ -31,6 +32,7 @@
 
 .header > div {
   display: flex;
+  align-items: center;
   gap: 1rem;
 }
 
